[package]
name = "tiny_os"
version = "0.1.0"
edition = "2018"
authors = ["Noah Grant noahdgrant@gmail.com"]

# The profile used for 'cargo build'.
[profile.dev]
panic = "abort" # Disable stack unwinding on panic.

# The profile used for 'cargo build --release'.
[profile.release]
panic = "abort" # Disable stack unwinding on panic.
